--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="/home/rakshithk/workspace/UMLClassDiagramGenerator/lib/plantuml.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/rakshithk/workspace/JavaParser/javaparser-core/target/javaparser-core-2.2.3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/javaparser-core-2.2.3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/plantuml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
